feat(storage): 添加图片上传功能并优化文件处理
- 新增 uploadImage 方法支持图片上传
-重构 upload 方法，提高文件上传通用性
- 添加 ImageStreamUtils工具类，用于高效图片处理
- 更新 StorageService 接口，增加图片上传功能
-优化 LocalFileOperationServiceImpl 中的文件保存逻辑
- 调整 Constants 和 StorageConstants 中的配置项