@@ -1,6 +1,5 @@
 package cn.zhangchuangla.storage.core.service.impl;
 
-import cn.idev.excel.util.StringUtils;
 import cn.zhangchuangla.common.core.constant.Constants;
 import cn.zhangchuangla.common.core.enums.ResponseCode;
 import cn.zhangchuangla.common.core.exception.FileException;
@@ -9,6 +8,7 @@ import cn.zhangchuangla.storage.core.service.FileOperationService;
 import cn.zhangchuangla.storage.core.service.StorageConfigRetrievalService;
 import cn.zhangchuangla.storage.model.dto.UploadedFileInfo;
 import cn.zhangchuangla.storage.model.entity.config.LocalFileStorageConfig;
+import cn.zhangchuangla.storage.utils.ImageStreamUtils;
 import cn.zhangchuangla.storage.utils.StorageUtils;
 import com.alibaba.fastjson2.JSON;
 import lombok.extern.slf4j.Slf4j;
@@ -16,9 +16,10 @@ import org.apache.commons.io.FileUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.File;
-import java.io.IOException;
+import java.io.*;
 import java.nio.file.Paths;
+import java.text.SimpleDateFormat;
+import java.util.Date;
 import java.util.Objects;
 
 /**
@@ -30,67 +31,161 @@ import java.util.Objects;
 @Service(StorageConstants.LOCAL_STORAGE_SERVICE)
 public class LocalFileOperationServiceImpl implements FileOperationService {
 
-    private LocalFileStorageConfig localFileStorageConfig;
+
     private final StorageConfigRetrievalService storageConfigRetrievalService;
+    private LocalFileStorageConfig localFileStorageConfig;
 
     public LocalFileOperationServiceImpl(StorageConfigRetrievalService storageConfigRetrievalService) {
         this.storageConfigRetrievalService = storageConfigRetrievalService;
     }
 
     /**
-     * 初始化配置, 确保在每次调用服务方法之前调用
+     * 每次操作前拉取最新配置
      */
     private void initConfig() {
         String activeStorageType = storageConfigRetrievalService.getActiveStorageType();
         if (!StorageConstants.LOCAL.equals(activeStorageType)) {
-            throw new FileException("存储配置异常!请你文件配置刷新配置再试!");
+            throw new FileException("存储配置异常!请刷新配置后再试!");
         }
         String json = storageConfigRetrievalService.getCurrentStorageConfigJson();
-        if (StringUtils.isBlank(json)) {
+        if (json == null || json.isBlank()) {
             throw new FileException("本地文件存储配置未找到");
         }
         this.localFileStorageConfig = JSON.parseObject(json, LocalFileStorageConfig.class);
-
     }
 
     /**
-     * 上传文件
-     *
-     * @param file 文件传输数据传输对象
-     * @return 上传成功后的文件信息
+     * 通用日期目录 "yyyy/MM/dd"
+     */
+    private String todayDir() {
+        return new SimpleDateFormat("yyyy/MM/dd").format(new Date());
+    }
+
+    /**
+     * 根据目录确保存在
+     */
+    private File ensureDir(String datePath) throws IOException {
+        File dir = new File(localFileStorageConfig.getUploadPath(), datePath);
+        if (!dir.exists() && !dir.mkdirs()) {
+            throw new IOException("无法创建目录: " + dir.getAbsolutePath());
+        }
+        return dir;
+    }
+
+
+    /**
+     * 保存原始文件到本地。
      */
     @Override
     public UploadedFileInfo upload(MultipartFile file) {
         initConfig();
         try {
-            UploadedFileInfo uploadedFileInfo = new UploadedFileInfo();
-            // 生成年月日目录结构
-            String datePath = new java.text.SimpleDateFormat("yyyy/MM/dd").format(new java.util.Date());
-            File destDir = new File(localFileStorageConfig.getUploadPath(), datePath);
-
-            uploadedFileInfo.setFileExtension(file.getOriginalFilename());
-            uploadedFileInfo.setFileSize(String.valueOf(file.getSize()));
-            uploadedFileInfo.setFileType(file.getContentType());
-            uploadedFileInfo.setFileOriginalName(file.getOriginalFilename());
-            uploadedFileInfo.setMd5(StorageUtils.getFileSha256(file.getBytes()));
-            uploadedFileInfo.setExtension(StorageUtils.getFileExtension(Objects.requireNonNull(file.getOriginalFilename())));
-
-            // 生成文件名并保存文件
-            String newFileName = StorageUtils.generateFileName(file.getOriginalFilename());
+            String datePath = todayDir();
+            String newFileName = StorageUtils.generateFileName(Objects.requireNonNull(file.getOriginalFilename()));
+            File destDir = ensureDir(datePath);
             File destFile = new File(destDir, newFileName);
+
             file.transferTo(destFile);
 
-            uploadedFileInfo.setFileName(newFileName);
-            uploadedFileInfo.setFileUrl(Paths.get(localFileStorageConfig.getFileDomain(), Constants.RESOURCE_PREFIX, datePath, newFileName).toString());
-            uploadedFileInfo.setFileRelativePath(Paths.get(datePath, newFileName).toString());
-
-
-            return uploadedFileInfo;
+            return buildFileInfo(file, destFile, datePath, newFileName);
         } catch (IOException e) {
-            log.error("文件上传失败", e);
+            log.error("文件上传传失败", e);
             throw new FileException(ResponseCode.FILE_OPERATION_FAILED, "文件上传失败：" + e.getMessage());
         }
     }
+
+    /**
+     * 1. 保存原图 -> 2. 基于磁盘文件流式压缩 -> 3. 保存压缩图 -> 返回压缩图信息
+     */
+    @Override
+    public UploadedFileInfo uploadImage(MultipartFile file) throws IOException {
+        initConfig();
+
+        String originalFilename = Objects.requireNonNull(file.getOriginalFilename());
+        String fileExtension = StorageUtils.getFileExtension(originalFilename);
+        if (!ImageStreamUtils.isImage(fileExtension)) {
+            throw new FileException(ResponseCode.FileUploadFailed, "请上传有效的图片文件！");
+        }
+
+        String datePath = todayDir();
+        File destDir = ensureDir(datePath);
+        
+        // 1. 先保存原图
+        String originalFileName = StorageUtils.generateFileName(originalFilename);
+        File originalFile = new File(destDir, originalFileName);
+        
+        // 2. 生成压缩图文件名（加上compressed前缀或后缀标识）
+        String compressedFileName = "compressed_" + originalFileName;
+        File compressedFile = new File(destDir, compressedFileName);
+
+        try {
+            // 保存原图
+            file.transferTo(originalFile);
+            
+            // 基于已保存的原图文件进行压缩
+            try (InputStream in = new FileInputStream(originalFile);
+                 OutputStream out = new FileOutputStream(compressedFile)) {
+                ImageStreamUtils.compress(in, out, 1024, 1024, 0.9f, originalFilename);
+            }
+            
+        } catch (IOException e) {
+            log.error("图片保存或压缩失败", e);
+            // 清理可能已创建的文件
+            FileUtils.deleteQuietly(originalFile);
+            FileUtils.deleteQuietly(compressedFile);
+            throw new FileException(ResponseCode.FILE_OPERATION_FAILED, "图片处理失败：" + e.getMessage());
+        }
+
+        // 返回压缩图的信息，但保留原图在磁盘上
+        return buildFileInfo(originalFilename, compressedFile, datePath, compressedFileName, file.getContentType());
+    }
+
+
+    /**
+     * 构建文件信息
+     *
+     * @param src         文件源
+     * @param savedFile   保存文件
+     * @param datePath    文件保存路径
+     * @param newFileName 新文件名
+     * @return 文件信息
+     * @throws IOException 构建文件信息异常
+     */
+    private UploadedFileInfo buildFileInfo(MultipartFile src, File savedFile, String datePath, String newFileName) throws IOException {
+        UploadedFileInfo info = new UploadedFileInfo();
+        info.setFileOriginalName(src.getOriginalFilename());
+        info.setFileName(newFileName);
+        info.setFileExtension(StorageUtils.getFileExtension(newFileName));
+        info.setFileSize(String.valueOf(savedFile.length()));
+        info.setFileType(src.getContentType());
+        info.setExtension(StorageUtils.getFileExtension(newFileName));
+        info.setFileUrl(Paths.get(localFileStorageConfig.getFileDomain(), Constants.RESOURCE_PREFIX, datePath, newFileName).toString());
+        info.setFileRelativePath(Paths.get(datePath, newFileName).toString());
+        return info;
+    }
+
+    /**
+     * 构建文件信息
+     *
+     * @param originalFileName 文件源
+     * @param savedFile        保存文件
+     * @param datePath         文件保存路径
+     * @param newFileName      新文件名
+     * @return 文件信息
+     */
+    private UploadedFileInfo buildFileInfo(String originalFileName, File savedFile, String datePath, String newFileName, String fileType) {
+        UploadedFileInfo info = new UploadedFileInfo();
+        info.setFileOriginalName(originalFileName);
+        info.setFileName(newFileName);
+        info.setFileExtension(StorageUtils.getFileExtension(newFileName));
+        info.setFileSize(String.valueOf(savedFile.length()));
+        info.setFileType(fileType);
+        info.setExtension(StorageUtils.getFileExtension(newFileName));
+        info.setFileUrl(Paths.get(localFileStorageConfig.getFileDomain(), Constants.RESOURCE_PREFIX, datePath, newFileName).toString());
+        info.setFileRelativePath(Paths.get(datePath, newFileName).toString());
+        return info;
+    }
+
 
     /**
      * 删除文件
@@ -167,3 +262,4 @@ public class LocalFileOperationServiceImpl implements FileOperationService {
         return FileUtils.deleteQuietly(file);
     }
 }
+
